changed prometheus target list to be list of network device sysnames